--- a/readme
+++ b/readme
@@ -1,10 +1,10 @@
  基于ssm框架的图书管理系统
 已完成：
 1、使用maven管理依赖，并使得项目层次更加清晰。
-2、完成ssm框架配置文件的整合以及jdbc.properties和log4j.properties的配置
-3、
+2、完成ssm框架配置文件的整合以及jdbc.properties的配置
+3、完成基本的展示、分页、修改、删除、增加功能。
 todo：
-1、实现基本的帐号系统
-2、完成图书资料的上传功能
-3、完成图书的分类、搜索功能
+1、实现基本的管理员帐号系统
+2、实现图片的展示和上传功能
+3、实现简单的搜索功能
 
