--- a/readme
+++ b/readme
@@ -3,8 +3,9 @@
 1、使用maven管理依赖，并使得项目层次更加清晰。
 2、完成ssm框架配置文件的整合以及jdbc.properties的配置
 3、完成基本的展示、分页、修改、删除、增加功能。
+4、使用拦截器完成基本的帐号登录、登出功能。
 todo：
-1、实现基本的管理员帐号系统
-2、实现图片的展示和上传功能
+
+2、实现书籍图片的展示和上传功能
 3、实现简单的搜索功能
 
